--- a/Civica/Base.lproj/Main.storyboard
+++ b/Civica/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -531,11 +531,11 @@
                                             <rect key="frame" x="0.0" y="0.0" width="403" height="280"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ntt-GH-yQb">
-                                                    <rect key="frame" x="8" y="8" width="129" height="264"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar-1577909_960_720" translatesAutoresizingMaskIntoConstraints="NO" id="ntt-GH-yQb">
+                                                    <rect key="frame" x="8" y="8" width="129" height="172"/>
                                                     <color key="backgroundColor" name="AccentColor"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="128" id="mNo-VL-Mr8"/>
+                                                        <constraint firstAttribute="height" constant="150" id="DMR-Kj-ojx"/>
                                                         <constraint firstAttribute="width" constant="129" id="wil-rv-TUS"/>
                                                     </constraints>
                                                 </imageView>
@@ -568,7 +568,7 @@
                                                 <constraint firstItem="N0m-YU-Ayh" firstAttribute="top" secondItem="85B-Wl-xni" secondAttribute="bottom" constant="8" id="0JJ-Vt-vWW"/>
                                                 <constraint firstItem="85B-Wl-xni" firstAttribute="top" secondItem="lT0-Zl-PT7" secondAttribute="bottom" constant="8" id="0sw-TW-Dis"/>
                                                 <constraint firstItem="ntt-GH-yQb" firstAttribute="top" secondItem="lVu-zC-Es0" secondAttribute="top" constant="8" id="4wm-3y-fOP"/>
-                                                <constraint firstAttribute="bottom" secondItem="ntt-GH-yQb" secondAttribute="bottom" constant="8" id="7Oq-lf-PGc"/>
+                                                <constraint firstAttribute="bottom" secondItem="ntt-GH-yQb" secondAttribute="bottom" constant="100" id="8kB-XY-Axn"/>
                                                 <constraint firstItem="N0m-YU-Ayh" firstAttribute="leading" secondItem="ntt-GH-yQb" secondAttribute="trailing" constant="8" id="Ecs-f8-IuK"/>
                                                 <constraint firstItem="85B-Wl-xni" firstAttribute="leading" secondItem="ntt-GH-yQb" secondAttribute="trailing" constant="8" id="Fx8-k1-pvR"/>
                                                 <constraint firstAttribute="trailing" secondItem="N0m-YU-Ayh" secondAttribute="trailing" constant="8" id="KWM-O7-1eO"/>
@@ -616,7 +616,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kcg-Ba-4d3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1386" y="-668"/>
+            <point key="canvasLocation" x="1384.6153846153845" y="-668.24644549763025"/>
         </scene>
         <!--RepDetailViewController-->
         <scene sceneID="Pnt-QO-4BV">
@@ -739,31 +739,31 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Representative Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ta-h5-8Lc">
-                                        <rect key="frame" x="0.0" y="520" width="390" height="24"/>
+                                        <rect key="frame" x="0.0" y="520" width="390" height="130.66666666666663"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Position" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GGv-Pp-GHa">
-                                        <rect key="frame" x="0.0" y="544" width="390" height="20.333333333333371"/>
+                                        <rect key="frame" x="0.0" y="650.66666666666663" width="390" height="20.333333333333371"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KUi-OY-04e">
-                                        <rect key="frame" x="0.0" y="564.33333333333337" width="390" height="20.333333333333371"/>
+                                        <rect key="frame" x="0.0" y="671" width="390" height="20.333333333333371"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Telephone" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lz5-Lk-I9g">
-                                        <rect key="frame" x="0.0" y="584.66666666666663" width="390" height="20.333333333333371"/>
+                                        <rect key="frame" x="0.0" y="691.33333333333337" width="390" height="20.333333333333371"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Party" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="23P-YY-YiV">
-                                        <rect key="frame" x="0.0" y="605" width="390" height="127"/>
+                                        <rect key="frame" x="0.0" y="711.66666666666663" width="390" height="20.333333333333371"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
